--- a/src/css/cadastro.css
+++ b/src/css/cadastro.css
@@ -165,3 +165,8 @@ body {
     cursor: pointer;
     box-shadow: 0px 10px 40px -12px #6E7371;
 }
+
+.btn:hover{
+    background-color: #d2d6cf;
+    padding: 20px 0px;
+}
