--- a/src/css/editar.css
+++ b/src/css/editar.css
@@ -1,4 +1,3 @@
-/* para tirar a margem do body */
 body {
     font-family: "Montserrat", sans-serif;
     margin: 0;
@@ -167,8 +166,7 @@ body {
     box-shadow: 0px 10px 40px -12px #6E7371;
 }
 
-.btn-login:hover{
-    
+.btn:hover{
     background-color: #d2d6cf;
     padding: 20px 0px;
 }
