Paginas de cadastro e index com path pronto, terminar as outras depois, tambem passado para templates o html e o css com images para static

--- a/game_logs/static/css/error404.css
+++ b/game_logs/static/css/error404.css
@@ -1,6 +1,6 @@
 main{
     height: 95vh;
-    background-image: url(../imagens/fundo-espaco.jpg);
+    background-image: url(/game_logs/static/images/fundo-espaco.jpg);
     background-size: 100%;
     display: flex;
     justify-content: center;
