--- a/game_logs/templates/paginas/index.html
+++ b/game_logs/templates/paginas/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="pt-br">
   <head>
@@ -5,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jogo da Forca</title>
     <title>JOGO DA FORCA</title>
-    <link rel="shortcut icon" href="../imagens/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static 'images/favicon.png' %}" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/src/css/cabecalho.css">
+    <link rel="stylesheet" href="{% static 'css/variaveis.css' %}">
+    <link rel="stylesheet" href="{% static 'css/cabecalho.css' %}">
+    <link rel="stylesheet" href="{% static 'css/paginainicial.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="/src/css/paginainicial.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
   <body>
