Criado a viwes contato e login

--- a/game_logs/templates/paginas/cadastro.html
+++ b/game_logs/templates/paginas/cadastro.html
@@ -16,7 +16,7 @@
             <a class="navbar-button" href="#">CADASTRO</a>
         </div>
         <div class="navbar-more">
-            <a class="navbar-link" href=".//index.html">PAGINA INICIAL</a>
+            <a class="navbar-link" href="/">PAGINA INICIAL</a>
             <a class="navbar-link" href="#">CLASSIFICAÇÃO</a>
             <a class="navbar-link" href="#">INFORMAÇÕES PESSOAIS</a>
             <a class="navbar-link" href="#">CONTATO</a>
