--- a/game_logs/templates/paginas/editar.html
+++ b/game_logs/templates/paginas/editar.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">]
-    <link rel="stylesheet" href="../css/editar.css">
+    <link rel="stylesheet" href="{% static 'css/editar.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-    <link rel="shortcut icon" href="../imagens/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static 'images/favicon.png' %}" type="image/x-icon">
     <title>Alteração de Cadastro</title>
 </head>
 <body>
     <nav class="container-nav">
         <div class="navbar-play">
-            <a class="navbar-button" href="#">CADASTRO</a>
+            <a class="navbar-button" href="{% url 'cadastro' %}">CADASTRO</a>
         </div>
         <div class="navbar-more">
-            <a class="navbar-link" href=".//index.html">PAGINA INICIAL</a>
+            <a class="navbar-link" href="{% url 'home' %}">PAGINA INICIAL</a>
             <a class="navbar-link" href="#">CLASSIFICAÇÃO</a>
             <a class="navbar-link" href="#">INFORMAÇÕES PESSOAIS</a>
-            <a class="navbar-link" href="#">CONTATO</a>
+            <a class="navbar-link" href="{% url 'contato' %}">CONTATO</a>
         </div>
     </nav>
 
@@ -50,7 +50,7 @@
                 <input type="password" name="senha" placeholder="Senha">
             </div>
             <button class="btn-login btn">CONFIRMAR</button>
-            <p><span><a href="../html/login.html">Agora faça seu login</a></span></p>
+            <p><span><a href="{% url 'login' %}">Agora faça seu login</a></span></p>
         </div>
     </div>    
 </body>
