--- a/game_logs/templates/paginas/index.html
+++ b/game_logs/templates/paginas/index.html
@@ -18,14 +18,13 @@
   <body>
     <nav class="container-nav">
         <div class="navbar-play">
-            <a class="navbar-button" href="#">LOGIN</a>
+            <a class="navbar-button" href="{% url 'login' %}">LOGIN</a>
         </div>
         <div class="navbar-more">
-            <a class="navbar-link" href="index.html">PAGINA INICIAL</a>
-            <a class="navbar-link" href="/src/html/index.html">PAGINA INICIAL</a>
+            <a class="navbar-link" href="{% url 'home' %}">PAGINA INICIAL</a>
             <a class="navbar-link" href="#">CLASSIFICAÇÃO</a>
             <a class="navbar-link" href="#">INFORMAÇÕES PESSOAIS</a>
-            <a class="navbar-link" href="/src/html/contato.html">CONTATO</a>
+            <a class="navbar-link" href="{% url 'contato' %}">CONTATO</a>
         </div>
     </nav>
     <main>
@@ -33,7 +32,7 @@
         <h1 id="titulo">JOGO DA FORCA</h1>
       </div>
     <div class="container-principal">
-      <a href="../html/cadastro.html" id="botao-jogar">JOGUE GRÁTIS AGORA</a>
+      <a href="{% url 'cadastro' %}" id="botao-jogar">JOGUE GRÁTIS AGORA</a>
     <div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
