--- a/game_logs/templates/paginas/cadastro.html
+++ b/game_logs/templates/paginas/cadastro.html
@@ -31,6 +31,8 @@
         <div class="right-login">
         <div class="card-login"> <!--(CARD)-->
             <h1>CADASTRO</h1>
+            <form action="{% url 'cadastre' %}" method="POST">
+                {% csrf_token %}
             <div class="textfield"> <!--div para englobar a label e o input-->
                 <label for="usuario">Nome Completo</label>
                 <input type="text" name="nome" placeholder="Nome"><!--div para receber o nome do usuario -->
@@ -52,6 +54,7 @@
                 <input type="password" name="senha" placeholder="Senha">
             </div>
             <button class="btn-login btn">CADASTRAR</button>
+        </form>
             <p>Já fez seu cadastro? <span><a href="{% url 'login' %}">Agora faça seu login</a></span></p>
         </div>
     </div>       
