--- a/game_logs/static/css/login.css
+++ b/game_logs/static/css/login.css
@@ -76,6 +76,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+   
 }
 
 /* chamando a tag h1 dentro da classe left-login */
@@ -107,6 +108,7 @@ body {
     background: #1A1E26;
     border-radius: 20px;
     box-shadow: 0px 10px 40px #343A40;
+    margin-top: 2em;
 }
 
 /* font-weight é a grossura da fonte */
@@ -171,4 +173,10 @@ body {
     
     background-color: #d2d6cf;
     padding: 20px 0px;
+}
+
+.formulario{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
