--- a/game_logs/templates/paginas/editar.html
+++ b/game_logs/templates/paginas/editar.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="container-nav">
         <div class="navbar-play">
-            <a class="navbar-button" href="{% url 'cadastro' %}">CADASTRO</a>
+            <a class="navbar-button" href="{% url 'cadastre' %}">CADASTRO</a>
         </div>
         <div class="navbar-more">
             <a class="navbar-link" href="{% url 'home' %}">PAGINA INICIAL</a>
