--- a/game_logs/templates/paginas/cadastro.html
+++ b/game_logs/templates/paginas/cadastro.html
@@ -29,34 +29,46 @@
             <h1>Faça cadastro<br>E entre para o time</h1>
         </div>
         <div class="right-login">
-        <div class="card-login"> <!--(CARD)-->
+        <div class="card-login">
             <h1>CADASTRO</h1>
-            <form action="{% url 'cadastre' %}" class="formulario" method="POST">
+            <form action="{% url 'cadastre' %}" class="formulario" method="POST" onsubmit="return validatePasswords()">
                 {% csrf_token %}
-            <div class="textfield"> <!--div para englobar a label e o input-->
+            <div class="textfield"> 
                 <label for="usuario">Nome Completo</label>
-                <input type="text" name="nome" placeholder="Nome"><!--div para receber o nome do usuario -->
-            </div>
+                <input type="text" name="nome" placeholder="Nome">
             <div class="textfield"> 
                 <label for="usuario">E-mail</label>
                 <input type="email" name="email" placeholder="e-mail">
             </div>
             <div class="textfield"> 
                 <label for="usuario">Usuário</label>
-                <input type="text" name="usuario" placeholder="Usuário"><!--div para receber o nome do usuario -->
+                <input type="text" name="usuario" placeholder="Usuário">
             </div>
             <div class="textfield">
                 <label for="senha">Senha</label>
-                <input type="password" name="senha" placeholder="Senha">
+                <input type="password" name="senha" id="senha" placeholder="Senha">
             </div>
             <div class="textfield">
                 <label for="senha">Confirme sua senha</label>
-                <input type="password" name="senha" placeholder="Senha">
+                <input type="password" name="confirma_senha" id="confirma_senha" placeholder="Senha">
             </div>
-            <button class="btn-login btn">CADASTRAR</button>
-        </form>
+            <button class="btn-login btn" type="submit" style="margin: 25px 0px;">CADASTRAR</button>
+            </form>
             <p>Já fez seu cadastro? <span><a href="{% url 'login' %}">Agora faça seu login</a></span></p>
         </div>
     </div>       
+
+    <script>
+        function validatePasswords() {
+            var senha = document.getElementById("senha").value;
+            var confirmaSenha = document.getElementById("confirma_senha").value;
+
+            if (senha !== confirmaSenha) {
+                alert("As senhas não conferem. Por favor, tente novamente.");
+                return false;
+            }
+            return true;
+        }
+    </script>
 </body>
 </html>
