--- a/game_logs/templates/paginas/play.html
+++ b/game_logs/templates/paginas/play.html
@@ -47,7 +47,7 @@
         </div>
         <div id="container">
             <div id="jogo">
-                <iframe src="" frameborder="0" width="800" height="600" ></iframe>
+                <iframe src="https://forcapygbag.vercel.app/" frameborder="0" width="800" height="600" ></iframe>
             </div>
         </div> 
     </main>
